--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ body {
     min-height: 100vh;
     grid-template-rows: auto 1fr auto;
 }
+.title {
+    background-color: rgba(25, 140, 150, 50);
+    font-size: 2.2rem;
+    text-align: center;
+    padding: 5rem 0;
+    margin-bottom: 2rem;
+}
 header {
     font-size: 1.6rem;
 }
